Fix inline image alignment for imagines in lists and blockquotes

--- a/assets/css/_partial/_img.scss
+++ b/assets/css/_partial/_img.scss
@@ -1,4 +1,14 @@
 img {
+
+  /* alignment for images in lists/blockquotes */
+  ul &, ol &, blockquote & {
+    display: block;
+    margin-left: 0;
+    margin-right: auto;
+    max-width: 100%;
+    max-height: auto;
+  }
+
   &.lazyload, &.lazyloading {
     @include object-fit(scale-down);
   }
